# yawn

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  NOTICES.md  README.md  build_yawn.ps1  build_yawn.sh  ideas.txt
.github/workflows/: ci.yml  release.yml
assets/examples/3d/: NOTICE
assets/examples/scripts/: kick_ring.lua  static_demo.lua
assets/shaders/: default.frag  model_passthrough.frag  other.frag  video_passthrough.frag
assets/shaders/examples/: 01_plasma.frag  02_cosine_palette.frag  03_flow_noise.frag  04_concentric_rings.frag  05_spectrum_bars.frag  06_waveform_scope.frag  07_spiral.frag  08_checker_warp.frag  09_voronoi.frag  10_tunnel.frag  11_fractal_circles.frag  12_tri_grid.frag  13_fbm_clouds.frag  14_kaleidoscope.frag  15_pulse_grid.frag  16_aurora.frag  17_radial_bars.frag  18_rgb_shift.frag  (+8 more)
cmake/: Dependencies.cmake  GenerateVersion.cmake  VST3Hosting.cmake
docs/: ableton-move.md  controller-scripting.md  ui-v2-architecture.md  ui-v2-events.md  ui-v2-layer-stack.md  ui-v2-measure-layout.md  ui-v2-theme.md  visual.md
docs/widgets/: README.md  arrangement_grid.md  button.md  checkbox.md  confirm_dialog.md  context_menu.md  device_widget.md  dialog.md  dropdown.md  fader.md  flex_box.md  fw_grid.md  grid.md  instrument_display_widget.md  knob.md  label.md  menu_bar.md  number_input.md  progress_bar.md  radio_group.md  scroll_bar.md  scroll_view.md  session_clip_grid.md  snap_scroll_container.md  split_view.md  stack.md  tab_view.md  table.md  text_input.md  toggle.md  tooltip.md  visualizer_widget.md  waveform_widget.md
packaging/linux/: com.yawn.daw.desktop  install-user.sh
src/: WidgetHint.h  main.cpp
src/app/: App.cpp  App.h  ArrangementClip.h  Macros.h  Project.h
src/audio/: ArrangementPlayback.cpp  ArrangementPlayback.h  AudioBuffer.h  AudioEngine.cpp  AudioEngine.h  AutoSampler.cpp  AutoSampler.h  Clip.h  ClipEngine.cpp  ClipEngine.h  FollowAction.h  Metronome.cpp  Metronome.h  MidiClipEngine.cpp  MidiClipEngine.h  Mixer.cpp  Mixer.h  OfflineRenderer.cpp  OfflineRenderer.h  TimeStretcher.cpp  TimeStretcher.h  TransientDetector.cpp  TransientDetector.h  Transport.cpp  Transport.h  WarpMarker.h
src/automation/: AutomationEngine.cpp  AutomationEngine.h  AutomationEnvelope.h  AutomationLane.h  AutomationTypes.h
src/controllers/: ControllerManager.cpp  ControllerManager.h  ControllerMidiPort.h  LuaEngine.cpp  LuaEngine.h
src/core/: ChainBase.h  Constants.h  ParameterInfo.h
src/effects/: AmpSimulator.cpp  AmpSimulator.h  AudioEffect.h  Biquad.h  Bitcrusher.h  Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  Convolution.h  ConvolutionReverb.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  EQ.cpp  EQ.h  EffectChain.h  EnvelopeFollower.h  Filter.cpp  Filter.h  FreqMap.h  Limiter.cpp  Limiter.h  NeuralAmp.cpp  NeuralAmp.h  NoiseGate.h  Oscilloscope.cpp  Oscilloscope.h  Phaser.h  PingPongDelay.h  Reverb.cpp  Reverb.h  Rotary.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SplineEQ.h  TapeEmulation.cpp  TapeEmulation.h  Tuner.cpp  (+2 more)
src/instruments/: DrawbarOrgan.cpp  DrawbarOrgan.h  DrumRack.cpp  DrumRack.h  DrumSlop.cpp  DrumSlop.h  DrumSynth.cpp  DrumSynth.h  ElectricPiano.cpp  ElectricPiano.h  Envelope.h  FMSynth.cpp  FMSynth.h  GranularSynth.cpp  GranularSynth.h  Instrument.h  InstrumentRack.cpp  InstrumentRack.h  KarplusStrong.cpp  KarplusStrong.h  Multisampler.cpp  Multisampler.h  Oscillator.h  Sampler.cpp  Sampler.h  StringMachine.cpp  StringMachine.h  SubtractiveSynth.cpp  SubtractiveSynth.h  Vocoder.cpp  Vocoder.h  WavetableSynth.cpp  WavetableSynth.h
src/link/: LinkManager.cpp  LinkManager.h
src/midi/: Arpeggiator.cpp  Arpeggiator.h  Chord.cpp  Chord.h  LFO.cpp  LFO.h  MidiClip.h  MidiEffect.h  MidiEffectChain.h  MidiEngine.cpp  MidiEngine.h  MidiMapping.cpp  MidiMapping.h  MidiMonitorBuffer.cpp  MidiMonitorBuffer.h  MidiPitch.cpp  MidiPitch.h  MidiPort.h  MidiRandom.cpp  MidiRandom.h  MidiTypes.h  NoteLength.cpp  NoteLength.h  Scale.cpp  Scale.h  VelocityEffect.cpp  VelocityEffect.h
src/pch/: yawn_core_pch.h  yawn_pch.h  yawn_test_pch.h
src/presets/: DevicePresetHelpers.h  PresetManager.cpp  PresetManager.h
src/ui/: ConfirmDialog.h  ContextMenu.h  DetailPanel.h  Font.cpp  Font.h  MenuBar.h  MixerView.cpp  MixerView.h  PianoRoll.h  Renderer.cpp  Renderer.h  SessionView.cpp  SessionView.h  Theme.h  ToastManager.h  VirtualKeyboard.h  Widget.h  Widgets.h  Window.cpp  Window.h
src/util/: AppSettings.h  Base64.h  EffectChainJson.h  Factory.h  FileIO.cpp  FileIO.h  IconLoader.cpp  IconLoader.h  Logger.h  MessageQueue.h  NoteNames.h  ProjectSerializer.cpp  ProjectSerializer.h  RingBuffer.h  SystemInfo.h  UndoManager.h  stb_image_impl.cpp
src/visual/: LiveInputEnum.cpp  LiveInputEnum.h  LiveVideoSource.cpp  LiveVideoSource.h  ShaderLibrary.cpp  ShaderLibrary.h  TextRasterizer.h  VideoDecoder.cpp  VideoDecoder.h  VideoImporter.cpp  VideoImporter.h  VisualClip.h  VisualEngine.cpp  VisualEngine.h  VisualEngineAPI.cpp  VisualEngineAPI.h  VisualKnobBus.h  VisualLFO.h
src/vst3/: VST3EditorHost.cpp  VST3EditorWindow.cpp  VST3EditorWindow.h  VST3Effect.cpp  VST3Effect.h  VST3Host.cpp  VST3Host.h  VST3Instrument.cpp  VST3Instrument.h  VST3Scanner.cpp  VST3Scanner.h
tests/: CMakeLists.txt  test_Arrangement.cpp  test_AudioBuffer.cpp  test_AudioEngine.cpp  test_AutoSampler.cpp  test_Automation.cpp  test_Clip.cpp  test_ClipEngine.cpp  test_DetailPanel.cpp  test_DeviceHeaderWidget.cpp  test_DeviceWidget.cpp  test_DialogFramework.cpp  test_Effects.cpp  test_FileIO.cpp  test_FlexBox.cpp  test_FollowAction.cpp  test_FrameworkComponents.cpp  test_FrameworkTypes.cpp  test_FwGrid.cpp  test_Instruments.cpp  test_Integration.cpp  test_LFO.cpp  test_LibraryDatabase.cpp  test_LinkManager.cpp  test_LiveVideoSource.cpp  test_M3DModel.cpp  test_MessageQueue.cpp  test_Metronome.cpp  test_MidiClip.cpp  test_MidiClipEngine.cpp  test_MidiEffects.cpp  test_MidiMapping.cpp  test_MidiTypes.cpp  test_Mixer.cpp  test_NoteNames.cpp  test_OfflineRenderer.cpp  test_PanelAnimation.cpp  test_PianoRoll.cpp  test_PresetManager.cpp  test_Primitives.cpp  (+40 more)
(+192 files in other folders)
